RenderResearchProject/RenderSource/RenderProgramDLL/RenderProgramDLL.h

	_RENDER_PROGRAM_DLL_H_ void GetSpecularFromMaterial(LitMaterial* material, float* specular);
	_RENDER_PROGRAM_DLL_H_ float GetShininessFromMaterial(LitMaterial* material);
	_RENDER_PROGRAM_DLL_H_ void AddTextureToMaterial(LitMaterial* material,Texture* texture);
	_RENDER_PROGRAM_DLL_H_ Material* NewUnlitMaterial();
	_RENDER_PROGRAM_DLL_H_ void SetColorToMaterial(UnlitMaterial* material, float* color);
	_RENDER_PROGRAM_DLL_H_ void GetColorFromMaterial(UnlitMaterial* material, float* color);
	_RENDER_PROGRAM_DLL_H_ void AddTextureToUnlitMaterial(UnlitMaterial* material, Texture* texture);
	_RENDER_PROGRAM_DLL_H_ Texture* GetTextureFromUnlitMaterial(UnlitMaterial* material);
	_RENDER_PROGRAM_DLL_H_ void SetTransparent(Material* material, bool isTransparent);
	//MeshRenderer functions
	_RENDER_PROGRAM_DLL_H_ MeshRenderer* NewMeshRenderer();
	_RENDER_PROGRAM_DLL_H_ void SetMeshToMeshRenderer(MeshRenderer* meshRenderer, Mesh* mesh);
	_RENDER_PROGRAM_DLL_H_ void SetupMeshRenderer(MeshRenderer* meshRenderer);
	_RENDER_PROGRAM_DLL_H_ void RenderMeshRenderer(MeshRenderer* meshRenderer, Transform* transform, Material* material);
	_RENDER_PROGRAM_DLL_H_ void CleanUpMeshRenderer(MeshRenderer* meshRenderer);
	//Transform functions
	_RENDER_PROGRAM_DLL_H_ Transform* NewTransform();
	_RENDER_PROGRAM_DLL_H_ void SetTransformPosition(Transform* transform, float* pos);
	_RENDER_PROGRAM_DLL_H_ void SetTransformSize(Transform* transform, float* size);
	_RENDER_PROGRAM_DLL_H_ void SetTransformRotation(Transform* transform, float* rotation);
	//DepthTest functions
	_RENDER_PROGRAM_DLL_H_ void OpenGLEnable(int glEnum);
	_RENDER_PROGRAM_DLL_H_ void OpenGLDisable(int glEnum);
	_RENDER_PROGRAM_DLL_H_ void OpenGLClear(int glEnum);
	_RENDER_PROGRAM_DLL_H_ void OpenGLStencilMask(int mask);
	_RENDER_PROGRAM_DLL_H_ void OpenGLStencilFunc(int func, int ref, int mask);
	_RENDER_PROGRAM_DLL_H_ void OpenGLStencilOp(int sfail, int dpfail, int dppass);
	_RENDER_PROGRAM_DLL_H_ void OpenGLBlendFunc(int sfactor, int dfactor);
	_RENDER_PROGRAM_DLL_H_ void OpenGLDepthFunc(int func);
	//TextRenderer function
	_RENDER_PROGRAM_DLL_H_ TextRenderer* NewTextRenderer();
	_RENDER_PROGRAM_DLL_H_ void LoadFontToTextRenderer(TextRenderer* textRenderer, Texture* m_texture, int widthRes, int heightRes, int cellHeight, int cellWidth, int initialASCII);
	_RENDER_PROGRAM_DLL_H_ void SetupTextQuad(TextRenderer* textRenderer);
	_RENDER_PROGRAM_DLL_H_ void RenderText(TextRenderer* textRenderer, Shader& s, const char*, float x, float y, float scale, float* color);
	//LineRenderer functions
	_RENDER_PROGRAM_DLL_H_ LineRenderer* NewLineRenderer();
	_RENDER_PROGRAM_DLL_H_ void LineRendererSetup(LineRenderer* lineRenderer);
	_RENDER_PROGRAM_DLL_H_ void LineRendererSetNewPosition(LineRenderer* lineRenderer, float* from, float* to);
	_RENDER_PROGRAM_DLL_H_ void LineRendererSetNewColor(LineRenderer* lineRenderer, float* color);
	_RENDER_PROGRAM_DLL_H_ void LineRender(LineRenderer* lineRenderer, Shader& s, float lineWidth);
	_RENDER_PROGRAM_DLL_H_ void LineRendererCleanUp(LineRenderer* lineRenderer);
	//Skybox functions
	_RENDER_PROGRAM_DLL_H_ Cubemaps* NewCubemap();
	_RENDER_PROGRAM_DLL_H_ void LoadTextureToCubemap(Cubemaps* cubemaps,Mesh* mesh, const char** texturePaths);
	_RENDER_PROGRAM_DLL_H_ void RenderCubemap(Cubemaps* cubemaps);