SimulationResearchProject/SimulationWFA/SimulationWFA/MespSimulationSystem/RenderLibrary/RenderProgramDLL.cs


        [DllImport(RenderProgramDLLPath, EntryPoint = "GetSpecularFromMaterial")]
        public static extern void GetSpecularFromMaterial(IntPtr matAdress, float[] specular);

        [DllImport(RenderProgramDLLPath, EntryPoint = "GetShininessFromMaterial")]
        public static extern float GetShininessFromMaterial(IntPtr matAdress);

        [DllImport(RenderProgramDLLPath, EntryPoint = "AddTextureToMaterial")]
        public static extern void AddTextureToMaterial(IntPtr matAdress, IntPtr textureAdress);
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "NewUnlitMaterial")]
        public static extern IntPtr NewUnlitMaterial();
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "SetColorToMaterial")]
        public static extern void SetColorToMaterial(IntPtr matAdress, float[] color);

        [DllImport(RenderProgramDLLPath, EntryPoint = "GetColorFromMaterial")]
        public static extern void GetColorFromMaterial(IntPtr matAdress, float[] color);

        [DllImport(RenderProgramDLLPath, EntryPoint = "AddTextureToUnlitMaterial")]
        public static extern void AddTextureToUnlitMaterial(IntPtr matAdress, IntPtr textureAdress);

        [DllImport(RenderProgramDLLPath, EntryPoint = "GetTextureFromUnlitMaterial")]
        public static extern IntPtr GetTextureFromUnlitMaterial(IntPtr matAdress);

        [DllImport(RenderProgramDLLPath, EntryPoint = "SetTransparent")]
        public static extern void SetTransparent(IntPtr matAdress, bool isTransparent);

        #endregion

        #region MeshRendererFunctions

        [DllImport(RenderProgramDLLPath, EntryPoint = "NewMeshRenderer")]
        public static extern IntPtr NewMeshRenderer();

        [DllImport(RenderProgramDLLPath, EntryPoint = "SetMeshToMeshRenderer")]
        public static extern void SetMeshToMeshRenderer(IntPtr meshRendererAdress, IntPtr meshAdress);
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "SetupMeshRenderer")]
        public static extern void SetupMeshRenderer(IntPtr meshRendererAdress);
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "RenderMeshRenderer")]
        public static extern void RenderMeshRenderer(IntPtr meshRendererAdress, IntPtr transfromAdress, IntPtr materialAdress);
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "CleanUpMeshRenderer")]
        public static extern void CleanUpMeshRenderer(IntPtr meshRendererAdress);
        
        #endregion
        
        #region TransformFunctions

        [DllImport(RenderProgramDLLPath, EntryPoint = "NewTransform")]
        public static extern IntPtr NewTransform();
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "SetTransformPosition")]
        public static extern void SetTransformPosition(IntPtr transformAdress, float[] pos);
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "SetTransformSize")]
        public static extern void SetTransformSize(IntPtr transformAdress, float[] size);
        
        [DllImport(RenderProgramDLLPath, EntryPoint = "SetTransformRotation")]
        public static extern void SetTransformRotation(IntPtr transformAdress, float[] rotation);

        #endregion

        #region OpenGLFunctions

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLEnable")]
        public static extern void OpenGLEnable(int glEnum);

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLDisable")]
        public static extern void OpenGLDisable(int glEnum);

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLClear")]
        public static extern void OpenGLClear(int glEnum);

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLStencilMask")]
        public static extern void OpenGLStencilMask(int mask);

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLStencilFunc")]
        public static extern void OpenGLStencilFunc(int func, int refValue, int mask);

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLStencilOp")]
        public static extern void OpenGLStencilOp(int sfail, int dpfail, int dppass);

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLCheckStencil")]
        public static extern void OpenGLCheckStencil();

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLBlendFunc")]
        public static extern void OpenGLBlendFunc(int sfactor, int dfactor);

        [DllImport(RenderProgramDLLPath, EntryPoint = "OpenGLDepthFunc")]
        public static extern void OpenGLDepthFunc(int func);

        #endregion

        #region TextRendererFunctions

        [DllImport(RenderProgramDLLPath, EntryPoint = "NewTextRenderer")]
        public static extern IntPtr NewTextRenderer();

        [DllImport(RenderProgramDLLPath, EntryPoint = "LoadFontToTextRenderer")]
        public static extern void LoadFontToTextRenderer(IntPtr textRendererAdress, IntPtr textureAdress, int widthRes, int heightRes, int cellHeight, int cellWidth, int initialASCII);

        [DllImport(RenderProgramDLLPath, EntryPoint = "SetupTextQuad")]
        public static extern void SetupTextQuad(IntPtr textRendererAdress);

        [DllImport(RenderProgramDLLPath, EntryPoint = "RenderText")]
        public static extern void RenderText(IntPtr textRendererAdress, IntPtr shader, string text, float x, float y, float scale, float[] color);

        #endregion

        #region LineRendererFunctions

        [DllImport(RenderProgramDLLPath, EntryPoint = "NewLineRenderer")]
        public static extern IntPtr NewLineRenderer();

        [DllImport(RenderProgramDLLPath, EntryPoint = "LineRendererSetup")]
        public static extern void LineRendererSetup(IntPtr lineRendererAdress);

        [DllImport(RenderProgramDLLPath, EntryPoint = "LineRendererSetNewPosition")]
        public static extern void LineRendererSetNewPosition(IntPtr lineRendererAdress, float[] from, float[] to);

        [DllImport(RenderProgramDLLPath, EntryPoint = "LineRendererSetNewColor")]
        public static extern void LineRendererSetNewColor(IntPtr lineRendererAdress, float[] color);

        [DllImport(RenderProgramDLLPath, EntryPoint = "LineRender")]
        public static extern void LineRender(IntPtr lineRendererAdress, IntPtr shaderAdress,float lineWidth);

        [DllImport(RenderProgramDLLPath, EntryPoint = "LineRendererCleanUp")]
        public static extern void LineRendererCleanUp(IntPtr textRendererAdress);


        #endregion

        #region CubemagpFunctions

        [DllImport(RenderProgramDLLPath, EntryPoint = "NewCubemap")]
        public static extern IntPtr NewCubemap();

        [DllImport(RenderProgramDLLPath, EntryPoint = "LoadTextureToCubemap")]
        public static extern void LoadTextureToCubemap(IntPtr cubemapAdress,IntPtr meshAdress, string[] texturePaths);

        [DllImport(RenderProgramDLLPath, EntryPoint = "RenderCubemap")]
        public static extern void RenderCubemap(IntPtr cubemapAdress);

        #endregion

    }
}
